fix(api): Unfavorite logic modified - Modified DeleteFavoriteHandler to remove user id retrieval from request patameters and use the secure middleware to fetch user ID - Changes related route from "/favorite/:id" to "/unfavorite", so recipe_id should be provided inside the query - Reinitialized swagger docs to include recent changes
